--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour Website</title>
-    <link rel="stylesheet" href="BarcelonaTour.css">
+    <link rel="stylesheet" href="Japanbook.css">
 </head>
 <body>
     <header class="header">
@@ -16,85 +16,29 @@
             <a href="#Tour Packages">Tour Packages</a>
             <a href="#Contact Us">Contact Us</a>
         </nav>
-        <select name="Eng" id="Languange">
+        <select name="Eng" id="Language">
             <option value="Eng">Eng</option>
-          </select>
+        </select>
         <a href="LINK NI DIRI" class="btn">Log In</a>
         <button class="signup-button">Sign Up</button>
     </header>
-    <main>  
-        <section class="home">
-        </section>  
-        <div class="back">
-            <button class="back-button"><a href="hciPROJECT.html"> Back </a></button>
-        </div>
-        <!-- TOUR PACKAGES -->
 
+    <main>
+        <section class="booking-container">
+            <div class="step active">Booking Details</div>
+            <div class="step2">Your Details</div>
+            <div class="step3">Payment</div>
+        </section>
+        <div class="title">
+            <h1>When will you visit?</h1>
+        </div>
         <section class="container">
-            <div class="tour">
-                <div class="tour-image tour-1"></div>
-                <div class="tour-image tour-2"></div>
-                <div class="tour-image tour-2"></div>
-                <div class="tour-image tour-2"></div>
-            </div>
-            <div class="tour1">
-                <h1>Japan Tour</h1>
-                <h2>from 34€</h2>
-                <p>EVERY DAY</p>
-                <p>A tour of the cdsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaity and its sorroundings led by a professional...</p>
-                <p>Select a date</p>
-                <p>Time</p>
-            </div>
+            <div class="time"></div>
+            <div class="tickets"></div>
+
         </section>
-
-        <!-- Details -->
-        <div class="title">
-            <h1>Details</h1>
-        </div>
-        <section class="container2">
-            <div class="details">
-            <p>saddsadsadxsadxadsadaxaxa</p>
-            <p>1</p>
-            <p>2</p>
-            <p>3</p>
-            <p>4</p>
-            <p>5</p>
-            <p>6</p>
-            <p>7</p>
-            </div>
-            
-        </section>
-
-        <div class="title">
-            <h1>Customer Photos</h1>
-        </div>
-
-        <section class="booking-section">
-            <div class="book-image book-1"></div>
-        </section>>
-
-        <!-- HAPPY CUSTOMER -->
-
-        <section class="container3">
-            <div class="customer">
-                <div class="customer-image customer-1"></div>
-                <h2>Japan Tour</h2>
-                <p>from 34€</p>
-                <p>EVERY DAY</p>
-                <p>A tour of the city and its sorroundings led by a professional...</p>
-                <a href="">Read more -></a>
-            </div>
-            <div class="customer">
-                <div class="customer-image customer-2"></div>
-                <h2>Japan Tour</h2>
-                <p>from 34€</p>
-                <p>EVERY DAY</p>
-                <p>A tour of the city and its sorroundings led by a professional...</p>
-                <a href="">Read more -></a>
-            </div>
-        </section>
-
     </main>
+
     <footer>
         <!-- Footer content -->
     </footer>
