--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -39,11 +39,13 @@
             </div>
             <div class="tour1">
                 <h1>Japan Tour</h1>
-                <h2>from 34€</h2>
-                <p>EVERY DAY</p>
-                <p>A tour of the cdsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaity and its sorroundings led by a professional...</p>
-                <p>Select a date</p>
-                <p>Time</p>
+                <h2>from<span class="highlightblue"> 34€</span></h2>
+                <div class="japantourpar">
+                <P>Start in Tokyo and end in Osaka! With the Explorer tour Japan One Life</P>
+                <P>Adventures - 10 Days, you have a 10 days tour package taking you through</P>
+                <p>Tokyo, Japan and 4 other destinations in Japan. Japan One Life Adventures - 10</p>
+                <p>Days includes accommodation, an expert guide, meals, transport and more.</p>
+            </div>
             </div>
         </section>
 
@@ -53,14 +55,22 @@
         </div>
         <section class="container2">
             <div class="details">
-            <p>saddsadsadxsadxadsadaxaxa</p>
-            <p><img src="https://i.ibb.co/zRkD85B/002-group.png"></p>
-            <p><img src="https://i.ibb.co/sPvYdGj/003-hour-glass.png"></p>
-            <p><img src="https://i.ibb.co/WfY6ztn/001-location.png"></p>
-            <p><img src="https://i.ibb.co/qB8McDH/002-tour-guide.png"></p>
-            <p><img src="https://i.ibb.co/XCTGVmd/003-language.png"></p>
-            <p><img src="https://i.ibb.co/Vq72sHH/001-ticket.png"></p>
-            <p><img src="https://i.ibb.co/7XPzzGD/002-bus.png"></p>
+            <div class="detailsparagraph">
+            <p>Konnichiwa everyone! Japan offers a mind-blowing mix of ancient tradition, neon-lit </p>
+            <p>metropolises, breathtaking natural beauty, and a unique culture that will leave you</p>
+            <p>enchanted. To make the most of our journey, Our action-packed Japan tour blends</p>
+            <p>the neon lights of Tokyo with serene temples in Kyoto, offering a delicious mix of</p>
+            <p>cultural experiences and breathtaking natural beauty. This is just a taste of what</p>
+            <p>awaits us in Japan. Get ready for an unforgettable adventure filled with cultural</p>
+            <P>encounters, historical wonders, and delicious food!</P>
+            </div>
+            <p><img src="https://i.ibb.co/zRkD85B/002-group.png"> <span class="bold">Number of group: </span> 10-15</p>
+            <p><img src="https://i.ibb.co/sPvYdGj/003-hour-glass.png"> <span class="bold">Duration: </span> 5 hours and 45 minutes</p>
+            <p><img src="https://i.ibb.co/WfY6ztn/001-location.png"> <span class="bold">Departuring and arriving areas: </span> Haneda Airport</p>
+            <p><img src="https://i.ibb.co/qB8McDH/002-tour-guide.png"> <span class="bold">Guide service: </span> Included</p>
+            <p><img src="https://i.ibb.co/XCTGVmd/003-language.png"> <span class="bold">Language: </span> English, Japanese</p>
+            <p><img src="https://i.ibb.co/Vq72sHH/001-ticket.png"> <span class="bold">Entry Fees: </span> 60.00$(tax-free)</p>
+            <p><img src="https://i.ibb.co/7XPzzGD/002-bus.png"> <span class="bold">EntryTransportation: </span> Bus</p>
             </div>
             
         </section>
