--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -29,11 +29,23 @@
             <div class="step2">Your Details</div>
             <div class="step3">Payment</div>
         </section>
-        <div class="title">
-            <h1>When will you visit?</h1>
-        </div>
         <section class="container">
-            <div class="time"></div>
+            <div class="visit">
+                <div class="title">
+                    <h1>When will you visit?</h1>
+                </div>
+                <input type="date" id="dateInput" name="dateInput">
+                <div class="title">
+                    <h1>What time?</h1>
+                </div>
+                <input type="time" id="timeInput" name="timeInput">
+                <div class="title">
+                    <h1>Select Your Tickets</h1>
+                </div>
+            </div>
+                
+
+                <div class=""></div>
             <div class="tickets"></div>
 
         </section>
