--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -41,6 +41,18 @@
                 <input type="time" id="timeInput" name="timeInput">
                 <div class="title">
                     <h1>Select Your Tickets</h1>
+                        <div class="bullet-list">
+                            <p>
+                                <ul>
+                                    <li>hknacaojklnxancaxjijckalxjnckjanx</li>
+                                </ul>
+                            </p>
+                            <p>
+                                <ul>
+                                    <li>hknacaojklnxancaxjijckalxjnckjanx</li>
+                                </ul>
+                            </p>
+                        </div>
                 </div>
             </div>
                 
