--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -41,18 +41,23 @@
                 <input type="time" id="timeInput" name="timeInput">
                 <div class="title">
                     <h1>Select Your Tickets</h1>
-                        <div class="bullet-list">
-                            <p>
-                                <ul>
-                                    <li>hknacaojklnxancaxjijckalxjnckjanx</li>
-                                </ul>
-                            </p>
-                            <p>
-                                <ul>
-                                    <li>hknacaojklnxancaxjijckalxjnckjanx</li>
-                                </ul>
-                            </p>
+                        <p>
+                            <li>hknacaojklnxancaxjijckalxjnckjanx</li>
+                            <li>hknacaojklnxancaxjijckalxjnckjanx</li>
+                        </p>
+                </div>
+                <div class="input-container">
+                    <div class="input-description">
+                        <p>Adult</p>
+                        <p>50 petot</p>
+                    </div>
+                    <div class="input-with-controls">
+                        <div class="controls">
+                            <button class="increment">+</button>
+                            <input type="text" id="adultInput" name="adultInput" maxlength="3">
+                            <button class="decrement">-</button>
                         </div>
+                    </div>
                 </div>
             </div>
                 
