--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -45,10 +45,11 @@
                 <P>Adventures - 10 Days, you have a 10 days tour package taking you through</P>
                 <p>Tokyo, Japan and 4 other destinations in Japan. Japan One Life Adventures - 10</p>
                 <p>Days includes accommodation, an expert guide, meals, transport and more.</p>
+                <button class="signup-button"><a href="Japanbook.html">Book Now</a></button>
             </div>
             </div>
         </section>
-
+        
         <!-- Details -->
         <div class="title">
             <h1>Details</h1>
