--- a/PROJECT HCI/hciPROJECT.html
+++ b/PROJECT HCI/hciPROJECT.html
@@ -77,7 +77,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="RomeTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-more">  <span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-4"></div>
@@ -218,15 +218,15 @@
         <section class="container3">
             <div class="customer">
                 <div class="customer-image customer-1"></div>
-                <h1>Hayop na yawa</h1>
-                <p>A tour of the city and its sorroundings led by a professional...</p>
-                <a href="">Read more -></a>
+                <h1>Gu Wa Po</h1>
+                <h2>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h2>
             </div>
-            <div class="customer">\
+            <div class="customer">
                 <div class="customer-image customer-2"></div>
-                <h1>Hayop na yawa</h1>
-                <p>A tour of the city and its sorroundings led by a professional...</p>
-                <a href="">Read more -></a>
+                <h1>Ma Gun Duh</h1>
+                <h2>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h2>
             </div>
         </section>
 
