--- a/PROJECT HCI/hciPROJECT.html
+++ b/PROJECT HCI/hciPROJECT.html
@@ -219,14 +219,12 @@
             <div class="customer">
                 <div class="customer-image customer-1"></div>
                 <h1>Gu Wa Po</h1>
-                <h2>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h2>
+                <h2>Lorem Ipsum ha sido el texto de relleno estándar de la industria desde el siglo XVI, cuando un impresor desconocido tomó una galería de tipos y los mezcló para hacer un libro de muestras tipográficas. Ha sobrevivido no sólo a cinco siglos, sino también al salto hacia la composición tipográfica electrónica, permaneciendo esencialmente sin cambios.</h2>
             </div>
             <div class="customer">
                 <div class="customer-image customer-2"></div>
                 <h1>Ma Gun Duh</h1>
-                <h2>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h2>
+                <h2>は、無名の印刷業者が活字のゲラをスクランブルして活字見本帳を作成した 1500 年代以来、業界の標準的なダミーテキストです。それは 5 世紀だけでなく、電子写植への飛躍の時代にも、本質的には変わっていないまま生き残ってきました。</h2>
             </div>
         </section>
 
