--- a/PROJECT HCI/hciPROJECT.html
+++ b/PROJECT HCI/hciPROJECT.html
@@ -27,7 +27,7 @@
         <section class="home">
             <!-- Home options -->
         </section>
-        <div class="title">
+        <div class="titl3">
             <h1>Tour Packages</h1>
         </div>
 
@@ -47,7 +47,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its surroundings led by a professional...</p>
-                <button class="read-more"><a href="JapanTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="JapanTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-2"></div>
@@ -62,7 +62,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="SwitzerlandTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="SwitzerlandTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-3"></div>
@@ -77,7 +77,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">  <span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore">  <span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-4"></div>
@@ -92,7 +92,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="BarcelonaTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="BarcelonaTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-5"></div>
@@ -107,7 +107,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="ThailandTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="ThailandTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-6"></div>
@@ -122,7 +122,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="SouthKoreaTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="SouthKoreaTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-7"></div>
@@ -137,7 +137,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="SingaporeTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="SingaporeTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
             <div class="tour">
                 <div class="tour-image tour-8"></div>
@@ -152,7 +152,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more"><a href="FinlandTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-moore"><a href="FinlandTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
         </section>
 
