--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -84,26 +84,27 @@
             <div class="book-image book-1"></div>
         </section>>
 
-        <!-- HAPPY CUSTOMER -->
-        <div class="happy">
-            <h1>Happy Customer Says</h1>
+       <!-- HAPPY CUSTOMER -->
+       <div class="happy">
+        <h1>Happy Customer Says
+            <img class="blue-background" src="https://i.ibb.co/zhPCxSN/right-arrow-angle.png">
+            <img class="gray-background" src="https://i.ibb.co/nfgqnsq/left-arrow.png">
+        </h1>
+    </div>
+    
+    <section class="container3">
+        <div class="customer">
+            <div class="customer-image customer-1"></div>
+            <h1>Gu Wa Po</h1>
+            <h2>Lorem Ipsum ha sido el texto de relleno estándar de la industria desde el siglo XVI, cuando un impresor desconocido tomó una galería de tipos y los mezcló para hacer un libro de muestras tipográficas. Ha sobrevivido no sólo a cinco siglos, sino también al salto hacia la composición tipográfica electrónica, permaneciendo esencialmente sin cambios.</h2>
         </div>
-
-        <section class="container3">
-            <div class="customer">
-                <div class="customer-image customer-1"></div>
-                <h1>Hayop na yawa</h1>
-                <p>A tour of the city and its sorroundings led by a professional...</p>
-                <a href="">Read more -></a>
-            </div>
-            <div class="customer">\
-                <div class="customer-image customer-2"></div>
-                <h1>Hayop na yawa</h1>
-                <p>A tour of the city and its sorroundings led by a professional...</p>
-                <a href="">Read more -></a>
-            </div>
-        </section>
-
+        <div class="customer">
+            <div class="customer-image customer-2"></div>
+            <h1>Ma Gun Duh</h1>
+            <h2>は、無名の印刷業者が活字のゲラをスクランブルして活字見本帳を作成した 1500 年代以来、業界の標準的なダミーテキストです。それは 5 世紀だけでなく、電子写植への飛躍の時代にも、本質的には変わっていないまま生き残ってきました。</h2>
+        </div>
+    </section>
+    
     </main>
     <footer>
         <!-- Footer content -->
