--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -89,11 +89,36 @@
             </div>
 
             <div class="tickets">
-                <div class="visit">
+                <div class="content">
                     <div class="overview">
-                        <h1>Your Ticket Overview</h1>
+                        <h1>Your Ticket Overview</h1>  
                     </div>
+                    <div class="ticketoverview">
+                        <div class="ticket-image ticket-1"></div>
+                        <div class="information">
+                        <h2>Tour In Barcelona, Spain</h2>
+                        <p>MON, 23 AUG 2024</p>
+                        <p>4:00 AM ETA</p>
+                    </div>
+                </div>
+                <div class="ticket-details">
+                    <p class="adult">
+                        <span> Adult (18+) (€32.00)<span class="priceadult">€99.99 </span></span> 
+                    </p>
+                    <p class="child"></p>
+                        <span> 1 Child (6-17)<span class="pricechild">€99.99 </span></span> 
+                    </p>
+                    <p class="infant"></p>
+                        <span> 1 Infant (0-5)<span class="priceinfant">€99.99 </span></span> 
+                    </p>
+                    
+                </div>
+                <h1 class="total">
+                    <span> Total Price<span class="pricetotal">€999.99 </span></span> 
+                </h1>
+                <button class="next">Go to the Next Step</button>
             </div>
+            
         </section>
     </main>
 
