--- a/PROJECT HCI/hciPROJECT.html
+++ b/PROJECT HCI/hciPROJECT.html
@@ -152,7 +152,7 @@
                     </span>
                 </p>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-moore"><a href="FinlandTour.html"><span class="highlightblue">Read More -></span></a></button>
+                <button class="read-more"><a href="FinlandTour.html"><span class="highlightblue">Read More -></span></a></button>
             </div>
         </section>
 
@@ -167,37 +167,37 @@
                 <div class="service-image service-1"></div>
                 <h2>Japan Tour</h2>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">Read More -> </button>
+                <button class="read-more"><a href="BikeRental.html"> Read More -> </a></button>
             </div>
             <div class="services">
                 <div class="service-image service-2"></div>
                 <h2>Japan Tour</h2>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">Read More -> </button>
+                <button class="read-more"><a href="BikeRental.html"> Read More -> </a></button>
             </div>
             <div class="services">
                 <div class="service-image service-3"></div>
                 <h2>Japan Tour</h2>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">Read More -> </button>
+                <button class="read-more"><a href="BikeRental.html"> Read More -> </a></button>
             </div>
             <div class="services">
                 <div class="service-image service-4"></div>
                 <h2>Japan Tour</h2>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">Read More -> </button>
+                <button class="read-more"><a href="BikeRental.html"> Read More -> </a></button>
             </div>
             <div class="services">
                 <div class="service-image service-5"></div>
                 <h2>Japan Tour</h2>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">Read More -> </button>
+                <button class="read-more"><a href="BikeRental.html"> Read More -> </a></button>
             </div>
             <div class="services">
                 <div class="service-image service-6"></div>
                 <h2>Japan Tour</h2>
                 <p>A tour of the city and its sorroundings led by a professional...</p>
-                <button class="read-more">Read More -> </button>
+                <button class="read-more"><a href="BikeRental.html"> Read More -> </a></button>
             </div>
         </section>
 
