--- a/PROJECT HCI/ordercomplete.html
+++ b/PROJECT HCI/ordercomplete.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div class="container">
+    <img src="https://i.ibb.co/d4W266M/check.png">  
     <h1>Your Order is Complete!</h1>
     <p>You will be receiving a confirmation email with order details.</p>
-    <a href="#">Go to the Home Page</a>
+    <button>Go to the Home Page</button>
   </div>
 </body>
 </html>
