--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -45,7 +45,7 @@
                 <P>Adventures - 10 Days, you have a 10 days tour package taking you through</P>
                 <p>Tokyo, Japan and 4 other destinations in Japan. Japan One Life Adventures - 10</p>
                 <p>Days includes accommodation, an expert guide, meals, transport and more.</p>
-                <button class="signup-button"><a href="Japanbook.html">Book Now</a></button>
+                <button class="booknow-button"><a href="Japanbook.html">Book Now</a></button>
             </div>
             </div>
         </section>
