--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -21,6 +21,7 @@
           </select>
         <a href="LINK NI DIRI" class="btn">Log In</a>
         <button class="signup-button">Sign Up</button>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css">
     </header>
     <main>  
         <section class="home">
@@ -45,6 +46,9 @@
                 <P>Adventures - 10 Days, you have a 10 days tour package taking you through</P>
                 <p>Tokyo, Japan and 4 other destinations in Japan. Japan One Life Adventures - 10</p>
                 <p>Days includes accommodation, an expert guide, meals, transport and more.</p>
+                <div id='calendar'></div>
+                <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+                <script src="JapanTour.js"></script>
                 <button class="booknow-button"><a href="Japanbook.html">Book Now</a></button>
             </div>
             </div>
