--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -49,6 +49,9 @@
                 <div id='calendar'></div>
                 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
                 <script src="JapanTour.js"></script>
+                <div class="time-title"><h3>Time</h3></div>
+                <input type="time" id="timeInput" name="timeInput" placeholder="Select a time">
+                <script src="JapanTour.js"></script>
                 <button class="booknow-button"><a href="Japanbook.html">Book Now</a></button>
             </div>
             </div>
