--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -34,9 +34,11 @@
         <section class="container">
             <div class="tour">
                 <div class="tour-image tour-1"></div>
+                <div class="threecontainers">
                 <div class="tour-image tour-2"></div>
                 <div class="tour-image tour-3"></div>
                 <div class="tour-image tour-4"></div>
+            </div>
             </div>
             <div class="tour1">
                 <h1>Japan Tour</h1>
@@ -72,6 +74,7 @@
             <p>awaits us in Japan. Get ready for an unforgettable adventure filled with cultural</p>
             <P>encounters, historical wonders, and delicious food!</P>
             </div>
+            <div class="iconss">
             <p><img src="https://i.ibb.co/zRkD85B/002-group.png"> <span class="bold">Number of group: </span> 10-15</p>
             <p><img src="https://i.ibb.co/sPvYdGj/003-hour-glass.png"> <span class="bold">Duration: </span> 5 hours and 45 minutes</p>
             <p><img src="https://i.ibb.co/WfY6ztn/001-location.png"> <span class="bold">Departuring and arriving areas: </span> Haneda Airport</p>
@@ -79,6 +82,7 @@
             <p><img src="https://i.ibb.co/XCTGVmd/003-language.png"> <span class="bold">Language: </span> English, Japanese</p>
             <p><img src="https://i.ibb.co/Vq72sHH/001-ticket.png"> <span class="bold">Entry Fees: </span> 60.00$(tax-free)</p>
             <p><img src="https://i.ibb.co/7XPzzGD/002-bus.png"> <span class="bold">EntryTransportation: </span> Bus</p>
+             </div>
             </div>
             
         </section>
@@ -87,6 +91,13 @@
             <h1>Customer Photos</h1>
         </div>
 
+        <section class="containertwo">
+            <div class="tourimages">
+                <div class="tour-image tourone"></div>      
+                <div class="tour-image tourtwo"></div>
+                <div class="tour-image tourthree"></div>
+                <div class="tour-image tourfour"></div>
+            </div>
         <section class="booking-section">
             <div class="book-image book-1"></div>
         </section>>
