--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -95,9 +95,11 @@
             <div class="tourimages">
                 <div class="tour-image tourone"></div>      
                 <div class="tour-image tourtwo"></div>
+                    <div class="column"></div>
                 <div class="tour-image tourthree"></div>
                 <div class="tour-image tourfour"></div>
             </div>
+        </section>
         <section class="booking-section">
             <div class="book-image book-1"></div>
         </section>>
