--- a/PROJECT HCI/Japanbook3.html
+++ b/PROJECT HCI/Japanbook3.html
@@ -31,21 +31,29 @@
         </section>
         <section class="container">
             <div class="visit">
-                <div class="title">
-                    <h1>Seect a payment method</h1>
-                </div>
-                <div class="register">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Enter your name">
+                <div class="payment-method">
+                    <div class="title">
+                        <h1>Select a Payment Method</h1>
                     </div>
-                    <div class="form-group">
-                        <label for="surname">Surname</label>
-                        <input type="text" id="surname" name="surname" placeholder="Enter your surname">
-                    </div>
+                    <form action="#">
+                        <div class="payment-method">
+                            <input type="radio" id="paypal" name="payment" checked>
+                            <label for="paypal">PayPal</label>
+                            <img src="paypal_logo.png" alt="PayPal Logo">
+                        </div>
+                        <div class="payment-method">
+                            <input type="radio" id="credit-card" name="payment">
+                            <label for="credit-card">Pay with Credit Card</label>
+                            <div class="card-details">
+                                <input type="text" id="card-number" name="card-number" placeholder="Card number">
+                                <input type="text" id="expiration-date" name="expiration-date" placeholder="Expiration Date">
+                                <input type="text" id="security-code" name="security-code" placeholder="Card Security Code">
+                            </div>
+                        </div>
+                        <button type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
-
             <div class="tickets">
                 <div class="content">
                     <div class="overview">
