--- a/PROJECT HCI/hciPROJECT.html
+++ b/PROJECT HCI/hciPROJECT.html
@@ -37,7 +37,7 @@
             <div class="tour">
                 <div class="tour-image tour-1"></div>
                 <h2>Japan Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p>
+                <p>from <span class="prices">34€</span></p>
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -52,7 +52,7 @@
             <div class="tour">
                 <div class="tour-image tour-2"></div>
                 <h2>Switzerland, Zurich Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p> 
+                <p>from <span class="prices">34€</span></p> 
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -67,7 +67,7 @@
             <div class="tour">
                 <div class="tour-image tour-3"></div>
                 <h2>Rome, Italy Tour</h2> 
-                <p>from <span class="highlightblue">34€</span></p>
+                <p>from <span class="prices">34€</span></p>
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -82,7 +82,7 @@
             <div class="tour">
                 <div class="tour-image tour-4"></div>
                 <h2>Barcelona, Spain Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p>
+                <p>from <span class="prices">34€</span></p>
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -97,7 +97,7 @@
             <div class="tour">
                 <div class="tour-image tour-5"></div>
                 <h2>Thailand, Phucket Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p>
+                <p>from <span class="prices">34€</span></p>
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -112,7 +112,7 @@
             <div class="tour">
                 <div class="tour-image tour-6"></div>
                 <h2>South Korea Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p> 
+                <p>from <span class="prices">34€</span></p> 
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -127,7 +127,7 @@
             <div class="tour">
                 <div class="tour-image tour-7"></div>
                 <h2>Singapore Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p>
+                <p>from <span class="prices">34€</span></p>
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
@@ -142,7 +142,7 @@
             <div class="tour">
                 <div class="tour-image tour-8"></div>
                 <h2>Finland Tour</h2>
-                <p>from <span class="highlightblue">34€</span></p>
+                <p>from <span class="prices">34€</span></p>
                 <p class="tour-details">
                     <span class="highlightblue">
                         <img src="https://i.ibb.co/sJ0ZJgV/001-calendar.png"> EVERY DAY
