--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -56,7 +56,7 @@
                                     <button>+</button>
                                 </div>
                             </h2>
-                            <p>€34.00</p>
+                            <p><span class="blue">€34.00</span></p>
                             
                         </div>
                         <div class="ticket">
@@ -70,7 +70,7 @@
                                     <button>+</button>
                                 </div>
                             </p>
-                            <p>€22.00</p>
+                            <p><span class="blue">€22.00</span></p>
                         </div>
                         <div class="ticket">
                             <h2>Infant (0-5)</h2>
@@ -82,7 +82,7 @@
                                 </div>
                             </p>
                             
-                            <p>FREE</p>
+                            <p><Span class="blue">FREE</Span></p>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
             <div class="tickets">
                 <div class="content">
                     <div class="overview">
-                        <h1>Your Ticket Overview</h1>  
+                        <h1>Your Tickets Overview</h1>  
                     </div>
                     <div class="ticketoverview">
                         <div class="ticket-image ticket-1"></div>
