--- a/PROJECT HCI/Japanbook3.html
+++ b/PROJECT HCI/Japanbook3.html
@@ -31,28 +31,37 @@
         </section>
         <section class="container">
             <div class="visit">
-                <div class="payment-method">
-                    <div class="title">
-                        <h1>Select a Payment Method</h1>
-                    </div>
-                    <form action="#">
-                        <div class="payment-method">
-                            <input type="radio" id="paypal" name="payment" checked>
-                            <label for="paypal">PayPal</label>
-                            <img src="paypal_logo.png" alt="PayPal Logo">
+                <div class="title">
+                    <h1>Select a Payment Method</h1>
+                </div>
+                <form action="#">
+                    <div class="payment-method">
+                        <input type="radio" id="paypal" name="payment" checked>
+                        <label for="paypal"> PayPal</label>
+                        <p> You will be redirected to the Paypal website after submitting your order<img src="https://th.bing.com/th/id/R.fca76a9d27c54d07ba8c567cb3e2fe1d?rik=vJ%2fFvc7xLxNcEg&riu=http%3a%2f%2ftous-logos.com%2fwp-content%2fuploads%2f2017%2f09%2fPaypal-logo.jpg&ehk=Jf3VB7bWFm1sjKT%2bWcnvnB0PvjQJsJRK%2bAhPWwhR0NE%3d&risl=&pid=ImgRaw&r=0" alt="PayPal Logo"></p>  
                         </div>
-                        <div class="payment-method">
-                            <input type="radio" id="credit-card" name="payment">
-                            <label for="credit-card">Pay with Credit Card</label>
-                            <div class="card-details">
-                                <input type="text" id="card-number" name="card-number" placeholder="Card number">
-                                <input type="text" id="expiration-date" name="expiration-date" placeholder="Expiration Date">
-                                <input type="text" id="security-code" name="security-code" placeholder="Card Security Code">
+                    <div class="payment-method">
+                        <input type="radio" id="credit-card" name="payment">
+                        <label for="credit-card">Pay with Credit Card</label>
+                        <span class="credits">
+                            <div class="visa">
+                            <img src="https://th.bing.com/th/id/OIP.xVREsbEnxpFwYsgl4hNO7QHaDA?rs=1&pid=ImgDetMain">
+                            </div>
+                            <img src="https://th.bing.com/th/id/OIP.ruwJCwSFzckVyunkFHmK9AAAAA?rs=1&pid=ImgDetMain">
+                            <img src="https://th.bing.com/th/id/OIP.R9U_JABl7Ic60T5SoZpIKwHaHa?rs=1&pid=ImgDetMain">
+                            <img src="https://s3.amazonaws.com/freebiesupply/large/2x/mastercard-logo-png-transparent.png">
+                                
+                        </span>
+                        <div class="card-details">
+                            <input type="text" id="card-number" name="card-number" placeholder="Card number">
+                            <input type="text" id="expiration-date" name="expiration-date" placeholder="Expiration Date">
+                            <input type="text" id="security-code" name="security-code" placeholder="Card Security Code">
+                            <div class="card-what">
+                            <p>What is this?</p>
                             </div>
                         </div>
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
             <div class="tickets">
                 <div class="content">
