--- a/PROJECT HCI/Japanbook2.html
+++ b/PROJECT HCI/Japanbook2.html
@@ -36,8 +36,8 @@
                 </div>
                 <div class="register">
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Enter your name">
+                        <label for="firstname">Name</label>
+                        <input type="text" id="firstname" name="firstname" placeholder="Enter your name">
                     </div>
                     <div class="form-group">
                         <label for="surname">Surname</label>
@@ -83,12 +83,14 @@
                 <h1 class="total">
                     <span> Total Price<span class="pricetotal">€999.99 </span></span> 
                 </h1>
-                <button class="next" ><a href="Japanbook3.html">Go to the Next Step</button></a>
+                <button class="next" >Go to the Next Step</button></a>
             </div>
             
         </section>
     </main>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="book.js"></script>
     <footer>
         <!-- Footer content -->
     </footer>
