--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -116,11 +116,13 @@
                 <h1 class="total">
                     <span> Total Price<span class="pricetotal">€999.99 </span></span> 
                 </h1>
-                <button class="next" ><a href="Japanbook2.html">Go to the Next Step</button></a>
+                <button class="next" >Go to the Next Step</button></a>
             </div>
             
         </section>
     </main>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="book.js"></script>
 
     <footer>
         <!-- Footer content -->
