--- a/PROJECT HCI/Japanbook3.html
+++ b/PROJECT HCI/Japanbook3.html
@@ -91,12 +91,14 @@
                 <h1 class="total">
                     <span> Total Price<span class="pricetotal">€999.99 </span></span> 
                 </h1>
-                <button class="next" ><a href="ordercomplete.html">Go to the Next Step</button></a>
+                <button class="next" >Go to the Next Step</button></a>
             </div>
             
         </section>
     </main>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="book.js"></script>
     <footer>
         <!-- Footer content -->
     </footer>
