--- a/PROJECT HCI/Japanbook3.html
+++ b/PROJECT HCI/Japanbook3.html
@@ -97,7 +97,7 @@
         </section>
     </main>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="book.js"></script>
+    <script src="book3.js"></script>
     <footer>
         <!-- Footer content -->
     </footer>
