--- a/PROJECT HCI/JapanTour.html
+++ b/PROJECT HCI/JapanTour.html
@@ -16,11 +16,13 @@
             <a href="#Tour Packages">Tour Packages</a>
             <a href="#Contact Us">Contact Us</a>
         </nav>
-        <select name="Eng" id="Languange">
-            <option value="Eng">Eng</option>
-          </select>
-        <a href="LINK NI DIRI" class="btn">Log In</a>
-        <button class="signup-button">Sign Up</button>
+        <div class="languange">
+            <select name="Eng" id="Languange">
+                <option value="Eng">Eng</option>
+            </select>
+            <a href="LINK NI DIRI" class="btn">Log In</a>
+            <button class="signup-button">Sign Up</button>
+        </div>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css">
     </header>
     <main>  
@@ -126,5 +128,6 @@
     <footer>
         <!-- Footer content -->
     </footer>
+
 </body>
 </html>
