--- a/PROJECT HCI/RomeTour.html
+++ b/PROJECT HCI/RomeTour.html
@@ -16,11 +16,13 @@
             <a href="#Tour Packages">Tour Packages</a>
             <a href="#Contact Us">Contact Us</a>
         </nav>
-        <select name="Eng" id="Languange">
-            <option value="Eng">Eng</option>
-          </select>
-        <a href="LINK NI DIRI" class="btn">Log In</a>
-        <button class="signup-button">Sign Up</button>
+        <div class="languange">
+            <select name="Eng" id="Languange">
+                <option value="Eng">Eng</option>
+            </select>
+            <a href="LINK NI DIRI" class="btn">Log In</a>
+            <button class="signup-button">Sign Up</button>
+        </div>
     </header>
     <main>  
         <section class="home">
